# hl7-message-diff

./: .gitignore  CHANGELOG.md  LICENSE  README.md  kill-gate.md  landing-copy.md  pyproject.toml
.github/workflows/: test.yml
src/hl7_message_diff/: __init__.py  cli.py  differ.py  labels.py  parser.py
tests/: test_differ.py
tests/fixtures/: sample_a.hl7  sample_b.hl7
web/: app.js  index.html  styles.css
