[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hl7-message-diff"
version = "0.1.0"
description = "Semantic diff for HL7 v2 pipe-delimited messages: see which field changed, by name."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "hl7-message-diff contributors" }
]
keywords = ["hl7", "hl7v2", "diff", "healthcare", "integration", "interoperability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/example/hl7-message-diff"
Issues = "https://github.com/example/hl7-message-diff/issues"

[project.scripts]
hl7diff = "hl7_message_diff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hl7_message_diff = ["py.typed"]
